--- a/src/app/dashboards/loan-officer/loan-officer.component.scss
+++ b/src/app/dashboards/loan-officer/loan-officer.component.scss
@@ -42,6 +42,8 @@
     padding: 20px;
     box-sizing: border-box;
     cursor: pointer;
+    background-color: transparent;
+    border: 2px solid #121a2e;
 }
 
 .width-48 {
