--- a/src/app/tables/loan-officer-table/loan-officer-table.component.html
+++ b/src/app/tables/loan-officer-table/loan-officer-table.component.html
@@ -1,23 +1,22 @@
-<div>
-    <mat-form-field appearance="outline">
-        <mat-label>Filter</mat-label>
-        <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Gauteng Coaches" #input>
-      </mat-form-field>
-
+  <mat-form-field>
+    <mat-label>Filter</mat-label>
+    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium" #input>
+  </mat-form-field>
       <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
-        <!-- Company ID Column -->
+        <!--ID Column -->
         <ng-container matColumnDef="id">
           <th mat-header-cell *matHeaderCellDef> ID. </th>
           <td mat-cell *matCellDef="let element"> {{element.id}} </td>
         </ng-container>
 
-        <!-- Company name Column -->
+        <!-- Name Column -->
         <ng-container matColumnDef="name">
           <th mat-header-cell *matHeaderCellDef> Name </th>
           <td mat-cell *matCellDef="let element"> {{element.name | titlecase}} </td>
         </ng-container>
 
+        <!-- Last Name Column -->
         <ng-container matColumnDef="lastName">
             <th mat-header-cell *matHeaderCellDef> Last Name </th>
             <td mat-cell *matCellDef="let element"> {{element.lastName | titlecase}} </td>
@@ -51,5 +50,5 @@
       </table>
       <mat-paginator [length]="200" [pageSizeOptions]="[10, 50, 100]" aria-label="Select page">
       </mat-paginator>
-</div>
+
 
