--- a/src/app/dashboards/loan-officer/loan-officer.component.html
+++ b/src/app/dashboards/loan-officer/loan-officer.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar class="flex spacebetween-center" color="primary">
+<!-- <mat-toolbar class="flex spacebetween-center" color="primary">
     <div class="flex center-center">
         <button mat-icon-button matTooltip="Home">
             <mat-icon>person</mat-icon>
@@ -6,9 +6,9 @@
         <span>Loan Officer</span>
     </div>
     <div>
-        <mat-icon matTooltip="logout">logout</mat-icon>
+        
     </div>
-</mat-toolbar>
+</mat-toolbar> -->
 <div class="main-container flex column">
     <div class="flex gap-1em center-center">
         <div class="cards-container flex gap-1em width-48">
