--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<!-- <app-loan-officer></app-loan-officer> -->
-<app-borrower></app-borrower>
+<app-loan-officer></app-loan-officer>
+<!-- <app-borrower></app-borrower> -->
