--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<app-loan-officer></app-loan-officer>
+<!-- <app-loan-officer></app-loan-officer> -->
+<!-- <app-contact></app-contact> -->
+<!-- <app-registar></app-registar> -->
+
+<app-log-in></app-log-in>
