--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,3 @@
-<app-loan-officer></app-loan-officer>
+<!-- <app-loan-officer></app-loan-officer> -->
+<app-landing></app-landing>
+<!-- <app-enquire></app-enquire> -->
