--- a/src/styles.scss
+++ b/src/styles.scss
@@ -108,4 +108,6 @@ body {
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
-
+.mat-mdc-form-field-subscript-wrapper{
+    display: none;
+}
