--- a/src/styles.scss
+++ b/src/styles.scss
@@ -114,3 +114,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .mat-mdc-form-field-subscript-wrapper{
     display: none;
 }
+
+.m-b-1em {
+    margin-bottom: 1em;
+}
