--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -35,6 +35,9 @@ a:hover {
 .active {
     background-color: #121a2e !important;
     color: white !important;
+    p{
+        color: #fefefe;
+    }
 
 }
 
