--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -4,12 +4,12 @@
         <div class="full-height flex center-center gap-5">
             <div class="full-height image-card"><img class="full-height" src="../../../assets/images/loan.jfif"
                     alt="Loan logo"></div>
-            <p>Zaka lendings</p>
+            <p>Zaka Lendings</p>
         </div>
         <!-- Buttons -->
         <div class="flex gap-1em">
-            <button class="apply" mat-raised-button>Apply</button>
-            <button class="login" mat-raised-button>Login</button>
+            <button class="apply" mat-raised-button (click)="Apply()">Apply</button>
+            <button class="login" mat-raised-button (click)="logIn()">Login</button>
         </div>
     </mat-toolbar>
     <!-- End Navbar -->
