--- a/src/app/popup/log-in/log-in.component.html
+++ b/src/app/popup/log-in/log-in.component.html
@@ -1,43 +1,40 @@
-<div class="flex center-center full-width full-height">
-    <mat-card class="bg flex center-center width-40">
-        <div mat-dialog-content class="padding-1em width-80">
-            <form [formGroup] ="loginForm" class=" flex column">
-                <h1 class="text-center color-blue">Log In</h1>
-                    <!-- Email -->
-                    <mat-form-field >
-                        <mat-label>Email</mat-label>
-                        <input type="email" matInput formControlName="email" placeholder="fix@gmail.com">
-                        <mat-error *ngIf="loginForm.get('email')?.hasError('required')">
-                            Email address is <strong>required</strong>
-                        </mat-error>
-                        <mat-error *ngIf="loginForm.get('email')?.hasError('pattern')">
-                            enter a valid Email Adreess
-                        </mat-error>
-                    </mat-form-field>
-                    <!-- Password -->
-                    <mat-form-field>
-                        <mat-label>Password</mat-label>
-                        <input type="number" matInput formControlName="password" placeholder="****">
-                        <mat-error *ngIf="loginForm.get('password')?.hasError('required')">
-                            Password is <strong>required</strong>
-                        </mat-error>
-                        <mat-error *ngIf="loginForm.get('password')?.hasError('minlength')">
-                            Password should at least have 4 charectors
-                        </mat-error>
-                    </mat-form-field>
-                    <div class="color-b m-b-1em">
-                        <a >Forget Password</a>
-                    </div>
-
+<div class="flex center-center full-height full-width ">
+    <mat-card class="bg flex center-center full-height full-width">
+        <div mat-dialog-content class="no-overflow padding-1em width-80">
+            <form [formGroup]="loginForm" class="flex column gap-1em">
+                <h1 class="text-center color-blue no-margin">Log In</h1>
+                <!-- Email -->
+                <mat-form-field class="height-50">
+                    <mat-label>Email</mat-label>
+                    <input type="email" matInput formControlName="email" placeholder="fix@gmail.com">
+                    <mat-error *ngIf="loginForm.get('email')?.hasError('required')">
+                        Email address is <strong>required</strong>
+                    </mat-error>
+                    <mat-error *ngIf="loginForm.get('email')?.hasError('pattern')">
+                        enter a valid Email Adreess
+                    </mat-error>
+                </mat-form-field>
+                <!-- Password -->
+                <mat-form-field class="height-50">
+                    <mat-label>Password</mat-label>
+                    <input type="text" matInput formControlName="password" placeholder="****">
+                    <mat-error *ngIf="loginForm.get('password')?.hasError('required')">
+                        Password is <strong>required</strong>
+                    </mat-error>
+                    <mat-error *ngIf="loginForm.get('password')?.hasError('minlength')">
+                        Password should at least have 4 charectors
+                    </mat-error>
+                </mat-form-field>
+                <h4 class="no-margin text-center">Or</h4>
+                <div class="flex center-center"><hr class="width-80 no-margin text-center"></div>
+                <div class="sign flex center-center gap-1em pading-6" id="google-btn"></div>
+                <div class="sign flex center-center gap-1em pading-6" (click)="signInWithFacebook()"><img class="height-30" src="../../../assets/icons/facebook_174848.png" alt="facebook">continue with facebook</div>
                 <div class="flex gap-1em end-center m-b-1em">
                     <button mat-raised-button color="warn" type="button" class="btn flex-1"
-                        (click)="loginForm.reset()">Cancel</button>
-                    <button mat-raised-button  type="button" class="btn flex-1">Submit</button>
+                        (click)="loginForm.reset()" (dblclick)="close()" matTooltip="click to clear fields and double click to close">Cancel</button>
+                    <button mat-raised-button type="button" class="btn flex-1" (click)="Submit()">Submit</button>
                 </div>
-
-                <p>Dont have an account yet? <a href="register">Register</a> </p>
-
             </form>
-          </div>
-      </mat-card>
+        </div>
+    </mat-card>
 </div>
