--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -51,10 +51,11 @@
                 <div class="flex gap-1em end-center m-b-1em">
                     <button mat-raised-button color="warn" type="button" class="btn flex-1"
                         (click)="contactForm.reset()">Cancel</button>
-                    <button mat-raised-button  type="button" class="btn flex-1" (click)="openDialog()">Submit</button>
+                    <button mat-raised-button  type="button" class="btn flex-1" >Submit</button>
                 </div>
             </form>
           </div>
       </mat-card>
 </div>
+
 
