--- a/src/app/popup/log-in/log-in.component.scss
+++ b/src/app/popup/log-in/log-in.component.scss
@@ -50,12 +50,48 @@ $white: #efefef;
   }
 .padding-1em{
     padding: 1em;
+    box-sizing: border-box;
+}
+.pading-6{
+  padding: 6px;
+  box-sizing: border-box;
 }
 
 .width-40{
-    width: 40%;
+    width: 90%;
 }
 
 .width-80{
-    width: 80%;
+    width: 90%;
+}
+.no-margin{
+  margin:0 ;
+}
+.text-center{
+  text-align: center;
+}
+.height-30{
+  height: 30px;
+}
+.height-50{
+  height: 50px;
+}
+.sign{
+  width: 100%;
+  border: 2px solid #c2b7b7;
+  background-color: #ffffff;
+  border-radius: 10px;
+}
+.sign:hover{
+  width: 100%;
+  border: 3px dotted rgb(146, 143, 143);
+  border-radius: 10px;
+  background-color: #c2b7b7;
+  cursor: pointer;
+}
+.height-480{
+  height: 480px;
+}
+.no-overflow{
+  overflow-y: hidden;
 }
