--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -9,7 +9,7 @@
         <!-- Buttons -->
         <div class="flex gap-1em">
             <button class="apply" mat-raised-button (click)="apply()">Apply</button>
-            <button class="login" mat-raised-button>Login</button>
+            <button class="login" mat-raised-button (click)="logIn()">Login</button>
         </div>
     </mat-toolbar>
     <!-- End Navbar -->
