added create account

--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -9,8 +9,8 @@
                 <p>edward.juska@gmail.com</p>
                 <p>Johannesburg, RSA</p>
                 <div class="flex gap-1em">
-                    <button mat-raised-button color="accent">Message</button>
-                    <button mat-raised-button color="warn">Notifications</button>
+                    <button mat-raised-button type="button" class="color-blue">Notifications</button>
+                    <button mat-raised-button type="button" class="colorRed">Message</button>
                 </div>
             </div>
         </div>
@@ -91,7 +91,8 @@
                 </mat-form-field>
 
                 <div class="flex gap-1em end-center m-b-1em">
-                    <button mat-raised-button color="accent" class="btn flex-1">Save All</button>
+                    <button mat-raised-button class="half-width colorRed">Edit</button>
+                    <button mat-raised-button class="half-width colorBlue">Save Changes</button>
                 </div>
             </form>
         </div>
