--- a/src/app/components/profile/profile.component.scss
+++ b/src/app/components/profile/profile.component.scss
@@ -55,3 +55,12 @@ button {
     width: 70%;
 }
 
+.colorBlue {
+    background-color: #121a2e !important;
+    color: #fefefe !important;
+}
+
+.colorRed {
+    background-color: #cd2e37 !important;
+    color: #fefefe !important;
+}
