--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -41,7 +41,7 @@
                 <mat-label>Leave a comment</mat-label>
                 <textarea matInput  formControlName="textplace" placeholder="Ex. It makes me feel..."></textarea>
                 <mat-error *ngIf="contactForm.get('textplace')?.hasError('required')">
-                    Email is <strong>required</strong>
+                    Comment is <strong>required</strong>
                 </mat-error>
               </mat-form-field>
         
