--- a/src/app/components/page-not-found/page-not-found.component.html
+++ b/src/app/components/page-not-found/page-not-found.component.html
@@ -1,8 +1,12 @@
 
 
-<div class="component-container"> </div>
+<div class="component-container">
+   
+</div>
 
 <div  class="btn">
-   
-   <button mat-stroked-button type="button"  (click)="goBack()">Go Back</button>
+   <button mat-fab color="primary"  (click)="goBack()" >
+      GoBack
+   </button>
+
 </div>
