--- a/src/app/tables/loan-officer-table/loan-officer-table.component.html
+++ b/src/app/tables/loan-officer-table/loan-officer-table.component.html
@@ -5,53 +5,54 @@
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
   <!--ID Column -->
-  <ng-container matColumnDef="id">
-    <th mat-header-cell *matHeaderCellDef> ID. </th>
-    <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+  <ng-container matColumnDef="fullName">
+    <th mat-header-cell *matHeaderCellDef> fullName</th>
+    <td mat-cell *matCellDef="let element"> {{element.fullName}} </td>
   </ng-container>
 
-  <!-- Name Column -->
-  <ng-container matColumnDef="name">
-    <th mat-header-cell *matHeaderCellDef> Name </th>
-    <td mat-cell *matCellDef="let element"> {{element.name | titlecase}} </td>
-  </ng-container>
 
-  <!-- Last Name Column -->
-  <ng-container matColumnDef="lastName">
-    <th mat-header-cell *matHeaderCellDef> Last Name </th>
-    <td mat-cell *matCellDef="let element"> {{element.lastName | titlecase}} </td>
-  </ng-container>
+    <!-- Last Name Column -->
+    <ng-container matColumnDef="idNo">
+      <th mat-header-cell *matHeaderCellDef> Last Name </th>
+      <td mat-cell *matCellDef="let element"> {{element.lastName | titlecase}} </td>
+    </ng-container>
 
-  <!-- Email Column -->
-  <ng-container matColumnDef="email">
-    <th mat-header-cell *matHeaderCellDef> Email </th>
-    <td mat-cell *matCellDef="let element"> {{element.email}} </td>
-  </ng-container>
+    <!-- Email Column -->
+    <ng-container matColumnDef="gender">
+      <th mat-header-cell *matHeaderCellDef> Email </th>
+      <td mat-cell *matCellDef="let element"> {{element.email}} </td>
+    </ng-container>
 
-  <!-- Action Column -->
-  <ng-container matColumnDef="action">
-    <th mat-header-cell *matHeaderCellDef> Action </th>
-    <td mat-cell *matCellDef="let element">
-      <mat-icon>check_circle</mat-icon>
-      <mat-icon>cancel</mat-icon>
-    </td>
-  </ng-container>
+        <!-- Email Column -->
+        <ng-container matColumnDef="email">
+          <th mat-header-cell *matHeaderCellDef> Email </th>
+          <td mat-cell *matCellDef="let element"> {{element.email}} </td>
+        </ng-container>
 
-  <!-- Options Column -->
-  <ng-container matColumnDef="options">
-    <th mat-header-cell *matHeaderCellDef> Options </th>
-    <td mat-cell *matCellDef="let element">
-      <mat-icon>visibility</mat-icon>
-      <mat-icon>payments</mat-icon>
-      <mat-icon>delete</mat-icon>
-    </td>
-  </ng-container>
+    <!-- Action Column -->
+    <ng-container matColumnDef="action">
+      <th mat-header-cell *matHeaderCellDef> Action </th>
+      <td mat-cell *matCellDef="let element">
+        <mat-icon>check_circle</mat-icon>
+        <mat-icon>cancel</mat-icon>
+      </td>
+    </ng-container>
 
-   <!-- Documents Column -->
-   <ng-container matColumnDef="documents">
-    <th mat-header-cell *matHeaderCellDef> Documents </th>
-    <td mat-cell *matCellDef="let element"></td>
-  </ng-container>
+    <!-- Options Column -->
+    <ng-container matColumnDef="options">
+      <th mat-header-cell *matHeaderCellDef> Options </th>
+      <td mat-cell *matCellDef="let element">
+        <mat-icon>visibility</mat-icon>
+        <mat-icon>payments</mat-icon>
+        <mat-icon>delete</mat-icon>
+      </td>
+    </ng-container>
+
+    <!-- Documents Column -->
+    <ng-container matColumnDef="documents">
+      <th mat-header-cell *matHeaderCellDef> Documents </th>
+      <td mat-cell *matCellDef="let element"></td>
+    </ng-container> 
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
