--- a/src/app/landing/landing.component.scss
+++ b/src/app/landing/landing.component.scss
@@ -229,7 +229,7 @@ $white: #fefefe;
 }
 
 .gap{
-    height: 20%;
+    height: 15%;
 }
 
 .main-footer{
@@ -252,4 +252,8 @@ $white: #fefefe;
 
 .foot img{
     color: #fefefe;
+}
+
+.location{
+    color: #cd2e37;
 }
