--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -8,8 +8,8 @@
         </div>
         <!-- Buttons -->
         <div class="flex gap-1em">
-            <button class="apply" mat-raised-button >Apply</button>
-            <button class="login" mat-raised-button >Login</button>
+            <button class="apply" mat-raised-button (click)="apply()"  >Apply</button>
+            <button class="login" mat-raised-button (click)=" logIn()">Login</button>
         </div>
     </mat-toolbar>
     <!-- End Navbar -->
